welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:7: error: ';' expected but ']' found.
    ]}
    ^